fix underline color to be blue in dark mode

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,3 +1,7 @@
 .prose {
   max-width: 70ch !important;
 }
+
+.dark\:prose-invert a {
+  text-decoration-color: rgba(var(--color-primary-400), 1);
+}
